--- a/one_day_fe_react/src/HomeTab.css
+++ b/one_day_fe_react/src/HomeTab.css
@@ -31,8 +31,21 @@
 
 .home-section-grid {
     display: grid;
-    grid-template-columns: 282fr 143fr;
-    gap: 10px; /* Gap between grid items */
+    grid-template-columns: 282fr 20px 143fr;
+    position: relative;
+    align-items: start;
+}
+
+.home-section-grid > .dashboard-section:first-child::after {
+    content: '';
+    position: absolute;
+    width: 4px;
+    height: 4px;
+    background-color: #8A8A8A;
+    border-radius: 50%;
+    top: 50%;
+    left: calc(100% + 5px); /* 100% of the element width + half the gap */
+    transform: translate(-50%, -50%); /* Center the pseudo-element */
 }
 
 .dashboard-section {
